--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "ant-design-vue": "^4.2.6",
     "axios": "^1.13.2",
     "core-js": "^3.8.3",
+    "echarts": "^6.0.0",
     "vue": "^3.2.13",
+    "vue-echarts": "^8.0.1",
     "vue-router": "^4.6.3"
   },
   "devDependencies": {
